--- a/style.css
+++ b/style.css
@@ -1,70 +1,107 @@
-.container {
-  width:600px;
-  font-family: 'Open Sans', sans-serif;
-  margin-left: auto;
-  margin-right: auto;
+header {
+  position:relative;
+  display:flex;
+  justify-content:center;
+  width: 1300px;
+  height: 500px;
+  background: no-repeat center/100% url("http://stayathome-syllabus.greenfox.academy/week01/assets/first-website-header.png");
 }
-#email, button {
-  display:block;
-  width:100%;
-  height:30px;
+
+.header1 {
+  font-family: 'Abril Fatface', cursive;
+  color:#222;
+  font-size:35px;
+  position: absolute;
+  bottom:150px;
+  width:65%;
 }
-.newsletter-box {
-  color:grey;
-  border:solid thin #cfcfcf;
-  border-radius: 3px;
-  padding: 10px;
+
+.header2 {
+  font-family: 'Abril Fatface', cursive;
+  color:#222;
+  font-size:75px;
+  position: absolute;
+  bottom:50px;
+  width:65%;
+}
+
+main {
+  width:800px;
+  margin-left: 230px;
+  margin-right: 230px;
+  line-height:1.5;
+}
+
+blockquote {
+  font-family: 'Abril Fatface', cursive;
+  color:white;
+  background:#383838;
+  font-size:48px;
+  margin:60px 0;
+  padding:50px;
   position:relative;
 }
-button {
-  color:white;
-  background: #3cb878;
-  border:none;
-  margin-bottom: 10px;
+
+blockquote::before {
+  content: open-quote;
+  position:absolute;
+  top:-40px;
+  left:2px;
+  font-size:120px;
+  margin:0;
+  padding:0;
 }
-#email {
-  padding: 3px;
-  border: solid thin #cfcfcf;
-  border-radius: 3px;
-  box-sizing:border-box;
-  margin-bottom:5px;
+blockquote::after {
+  content: no-close-quote;
+  position:absolute;
+  top:-27px;
+  left:2px;
+  font-size:120px;
+  margin:0;
+  padding:0;
 }
-.newsletter-box h3 {
+
+p, ul, h1, h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  color: #222;
+  margin-left:50px;
+  list-style-type:square;
+}
+
+h3 {
+  font-family: 'Merriweather', serif;
+  font-size:15px;
+  margin-left:50px;
   margin-top:0px;
+  font-style:italic;
 }
-#checkbox {
-  position: relative;
-  bottom: 2px;
+
+.p1, .ul1 {
+  font-size:19px;
 }
-.close {
-  position: absolute;
-  top: 0px;
-  right: 7px;
-  cursor: pointer;
+
+strong {
+  font-weight:bold;
 }
-.question {
-  color:white;
-  font-size:70px;
-  text-align:center;
-  width: 100px;
-  height: 100px;
-  background: #3cb878;
-  border-radius: 50%;
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
+h1 {
+  margin-bottom:50px;
+  font-weight:bold;
+  font-size:24px;
+  text-transform:uppercase;
 }
-.card {
-  width:180px;
-  background: #3cb878;
-  text-align:center;
-  color: white;
-  padding-top:20px;
-  padding-bottom:3px;
-  box-shadow: 0px 0px 5px 2px grey;
+h2 {
+  font-weight:bold;
+  font-size:24px;
+  margin-bottom:0px;
 }
-.card-holder {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+
+p, ul {
+  margin-top:25px;
+  margin-bottom:40px;
+}
+section {
+  width:800px;
+  height:4px;
+  background:#383838;
+  margin:50px 30px;
 }
